# Yeppp

./: .hgeol  .hgignore  .hgtags  BUILD.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  SetVars.bat  codegen_dispatch_table.py  configure.py  make.cmd  set-vars.sh
YepppNewPeachPy/: codegen_dispatch_table.py  configure.py
YepppNewPeachPy/add/: add_generic.py  instruction_maps.py  test_add_unittest.py
YepppNewPeachPy/avx/: __init__.py
YepppNewPeachPy/avx/add/: add_generic.py  pipeline.py  test_add_unittest.py  yepCore_Add.py
YepppNewPeachPy/avx/multiply/: mult_instruction_maps.py  multiply_generic.py  yepCore_Multiply.py  yepCore_Multiply_V16sV16s_V16s.py
YepppNewPeachPy/avx512/add/: yepCore_Add.py
YepppNewPeachPy/common/: YepStatus.py
YepppNewPeachPy/sse/: __init__.py
YepppNewPeachPy/sse/add/: add_generic.py  sse_add_instruction_maps.py  yepCore_Add.py
YepppNewPeachPy/test/: avx_multiply_test.py  sse_add_test.py
binaries/android/yeppp/: Android.mk
bindings/R/: yerrr.R  yerrr.c
bindings/clr/: Doxyfile  Yeppp.CLR.csproj  build.cmd  footer.html  yeppp-clr.csproj
bindings/clr/examples/: build.cmd
bindings/clr/examples/sources/: CpuInfo.cs  Entropy.cs  Polynomial.cs  PolynomialF.cs  SystemTimer.cs
bindings/clr/sources/: Core.cs  Library.cs  Math.cs
bindings/clr/sources-csharp/: MainPage.dox  Version.rc
bindings/d/: x86-windows-default-i586.cmd
bindings/d/sources/: main.d
bindings/d/sources/yeppp/: library.d  types.d
bindings/fortran/: Doxyfile  Makefile
bindings/fortran/examples/sources/: Entropy.f90  Makefile
bindings/fortran/sources/: MainPage.dox  Makefile  yepCore.f90  yepLibrary.f90  yepMath.f90
bindings/go/src/yeppp/core/: DotProduct.go  Init.go
bindings/go/src/yeppp/math/: EvaluatePolynomial.go  Init.go  Log.go
bindings/java/: Doxyfile  Makefile  arm-linux-hardeabi-v7a.sh  arm-linux-softeabi-android.cmd  arm-linux-softeabi-androidv7a.cmd  arm-linux-softeabi-v5t.sh  build.xml  footer.html  java-1.5.cmd  mips-linux-o32-android.cmd  x64-linux-sysv-default.sh  x64-windows-ms-default.cmd  x86-linux-pic-android.cmd  x86-linux-pic-i586.sh  x86-windows-default-i586.cmd
bindings/java/examples/: build.xml  java-1.5.cmd
bindings/java/examples/sources/: CpuCycles.java  Entropy.java  Polynomial.java  PolynomialF.java
bindings/java/sources-java/info/yeppp/: ArmCpuIsaFeature.java  ArmCpuSimdFeature.java  ArmCpuSystemFeature.java  Core.java  CpuArchitecture.java  CpuCycleCounterState.java  CpuIsaFeature.java  CpuMicroarchitecture.java  CpuSimdFeature.java  CpuSystemFeature.java  CpuVendor.java  IA64CpuIsaFeature.java  Library.java  MainPage.dox  Math.java  MipsCpuIsaFeature.java  MipsCpuSimdFeature.java  MisalignedPointerError.java  PowerPCCpuIsaFeature.java  PowerPCCpuSimdFeature.java  SystemException.java  UnsupportedHardwareException.java  UnsupportedSoftwareException.java  Version.java  X86CpuIsaFeature.java  X86CpuSimdFeature.java  X86CpuSystemFeature.java
bindings/java/sources-jni/: yepJavaPrivate.h
bindings/java/sources-jni/core/: Add.c  DotProduct.c  Multiply.c  Subtract.c  SumSquares.c
bindings/java/sources-jni/math/: Exp.c  Log.c  Sin.c  Tan.c
cmake/: android-armeabi.toolchain.cmake  android-armeabiv7a.toolchain.cmake  android-mips.toolchain.cmake  android-x86.toolchain.cmake  linux-armel.toolchain.cmake  linux-armhf.toolchain.cmake  linux-k1om.toolchain.cmake  linux-ppc64.toolchain.cmake  linux-x86.toolchain.cmake  linux-x86_64.toolchain.cmake  utils.cmake  windows-x86.toolchain.cmake  windows-x86_64.toolchain.cmake
codegen/: CREDITS.txt  Function.py  LICENSE.txt  codegen_dispatch_table.py  core.py  generate-benchmark.py  generate-c-header.py  generate-default-impl.py  generate-dispatch-table.py  generate-init-function.py  generate-unit-test.py  math.py  string_template.py  yeppp_parse.py
codegen/common/: Argument.py  BenchmarkGenerator.py  DefaultImplementationGenerator.py  DispatchTableGenerator.py  Function.py  UnitTestGenerator.py  code_generator.py  string_template.py
codegen/yeppp/: __init__.py  codegen.py  module.py
docs/: index.html
drivers/: CREDITS.txt  LICENSE.txt
drivers/arm_pmu/: README.txt  yep_arm_pmu.c  yep_arm_pmu.h
examples/: CpuCycles.vcxproj  CpuInfo.vcxproj  Entropy.vcxproj  Makefile  Polynomial.vcxproj  PolynomialF.vcxproj  SystemTimer.vcxproj  examples.sln
examples/c/: Makefile
examples/c/sources/: CompileTimeInfo.c  CpuInfo.c  CpuInfoEx.c  Entropy.c  Polynomial.c  PolynomialF.c  SystemTimer.c  TestNewBuild.c
examples/csharp/: Examples.csproj  build.cmd
examples/csharp/sources/: CpuInfo.cs  Entropy.cs
examples/fortran/: Makefile
examples/go/: Entropy.go  Polynomial.go
examples/java/: build.xml
examples/java/sources/: CpuInfo.java
examples/sources/: CpuCycles.c  CpuInfo.c  EnergyCounter.c  Entropy.c  Polynomial.c  PolynomialF.c  SystemTimer.c
installer/windows/: Makefile  Version.c  Yeppp-SDK.wxs
runtime/: CMakeLists.txt  CREDITS.txt  LICENSE.txt  Makefile  make.cmd  x64-windows-ms-default.cmd  x86-windows-default-i586.cmd
runtime/sources/arm/: aeabi_dadd.c  aeabi_ddiv.c  aeabi_fcmpge.asm  aeabi_fcmple.asm  aeabi_fsub.c  fp_lib.h  udivmoddi4.c
runtime/sources/arm/gcc/eabi/: aeabi_dmul.c  aeabi_dsub.c  aeabi_fadd.c  div_tables.c  int_endianness.h  int_util.h
runtime/sources/mips/: int_types.h  udivdi3.c
runtime/sources/mips/gcc/: floatdidf.c  int_lib.h
runtime/sources/x86/: memcmp.asm  memcmp.x64-sysv.asm  memcmp.x86.asm  memcpy.asm  memcpy.x64-sysv.asm  memcpy.x86.asm  memset.asm  memset.x64-sysv.asm  memset.x86.asm  ms.cpp  udivdi3.x86.asm
runtime/sources/x86-64/msvc/: fltused.asm  memcmp.asm  memcpy.asm  memset.asm
runtime/sources/x86/msvc/: alldiv.asm  allmul.asm  allshl.asm  aulldiv.asm  fltused.asm  ftol.asm  sqrt.asm
specs/: core.yaml  math.yaml
tools/: YepppClient.cpp  YepppServer.cpp  yeppp_client.h  yeppp_server.h
